[package]
name = "blockchain-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
ethereum-types = "0.14"
sha3 = "0.10"
rlp = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"

revm = { version = "10", default-features = false, features = ["std", "serde"] }

tokio = {version = "1", features = ["full"]}
axum = "0.7"
tower = "0.4"
tower-http = {version = "0.5", features = ["cors"]}
uuid = {version = "1", features = ["v4"]}

tokio-test = "0.4"